--- a/client/src/styles/EtcButton.css
+++ b/client/src/styles/EtcButton.css
@@ -35,6 +35,7 @@ Use the content property to specify the content to insert.
 Use the ::before selector to insert something before the content. */
 
 :global(.dropdown-submenu > a:after) {
+  /* inserts ▶ next to 'Share' and put it on the right-end of the li */
   color: #c7c7c7 !important;
   content: '\25BA';
   top: -2px;
@@ -81,15 +82,12 @@ Use the ::before selector to insert something before the content. */
   width: 14%;
   margin-right: 10px;
 }
-
 :global(a:hover .facebook) {
   fill: #3b5998;
 }
-
 :global(a:hover .messenger) {
   fill: #0084ff;
 }
-
 :global(a:hover .twitter) {
   fill: #1da1f2;
 }
