--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -1,5 +1,7 @@
 :global(.about-container) {
   width: calc(100% - 220px);
+  display: grid;
+  grid-template: 1fr 320px /;
   float: right;
   margin: 0;
   padding: 25px;
@@ -7,20 +9,19 @@
 }
 
 :global(.about-container-left) {
-  width: calc(100% - 320px);
-  float: left;
+  grid-column-start: 1;
   margin: 0;
   padding: 25px;
 }
 
 :global(.about-container-right) {
-  width: 320px;
-  float: right;
+  grid-column-start: 2;
+  min-width: 250px;
   margin: 0;
   padding: 25px;
 }
 
-:global(.locationStat-heading) {
+:global(.locationStat-header) {
   font-size: 18px;
   font-weight: 600;
 }
@@ -37,4 +38,16 @@
   font-size: 14px;
   color: rgb(179, 179, 179);
   font-weight: 200;
+}
+
+:global(.artistPics-header) {
+  font-size: 18px;
+}
+
+:global(h2.biography) {
+  font-size: 18px;
+}
+
+:global(.biography-container) {
+  margin-top: 15px;
 }
