--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -42,12 +42,19 @@
 
 :global(.artistPics-header) {
   font-size: 18px;
+  margin-bottom: 15px;
 }
 
-:global(h2.biography) {
+:global(.biography-header) {
   font-size: 18px;
+  margin-bottom: 10px;
 }
 
 :global(.biography-container) {
-  margin-top: 15px;
+  margin-top: 25px;
+}
+
+:global(.biography-txt) {
+  font-weight: 100px;
+  color: rgb(179, 179, 179);
 }
