--- a/client/src/styles/EtcButton.css
+++ b/client/src/styles/EtcButton.css
@@ -43,6 +43,7 @@ Use the ::before selector to insert something before the content. */
   width: 0;
   height: 0;
   margin-top: 1px;
+  z-index: 10;
 }
 
 :global(.dropdown-submenu.pull-left) {
@@ -77,7 +78,7 @@ Use the ::before selector to insert something before the content. */
 /* icon SOURCE: https://material.io/tools/icons &https://simpleicons.org/ */
 
 :global(.etcDropDown > svg) {
-  size: 15px;
+  size: 15px important!;
   padding-bottom: 5px;
   width: 14%;
   margin-right: 10px;
