Bar icons fixed, images stored are higher quality

--- a/client/src/styles/navBar.css
+++ b/client/src/styles/navBar.css
@@ -39,6 +39,11 @@
 :global(.navBar-group) {
   background-color: transparent !important;
 }
+
 :global(.navBar-expand > ul) {
   background-color: transparent !important;
+}
+
+:global(.navBar-item:hover) {
+  color: white;
 }
