carousel no longer hidden

--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -21,7 +21,7 @@
   padding: 25px;
 }
 :global(.carousel) {
-  z-index: -10;
+  /* z-index: -10; */
 }
 :global(.locationStat-header) {
   font-size: 18px;
@@ -62,7 +62,7 @@
 }
 
 :global(.artistPics-container) {
-  z-index: -10;
+  z-index: 0;
 }
 
 :global(#carouselIndicators) {
@@ -71,5 +71,5 @@
 
 /* FIXME: Carousel controls not working z-index issue */
 :global(a.carousel-control-prev, a.carousel-control-next, ol.carousel-indicators) {
-  z-index: 0 !important;
+  /* z-index: 0 !important; */
 }
