--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -53,7 +53,6 @@
 }
 
 :global(.biography-container) {
-  margin-top: 25px;
 }
 
 :global(.biography-txt) {
@@ -63,6 +62,7 @@
 
 :global(.artistPics-container) {
   z-index: 0;
+  margin-top: 5vh;
 }
 
 :global(#carouselIndicators) {
