--- a/client/src/styles/EtcButton.css
+++ b/client/src/styles/EtcButton.css
@@ -60,12 +60,14 @@ Use the ::before selector to insert something before the content. */
   color: #c7c7c7 !important;
   fill: #c7c7c7;
   user-select: none;
+  transition: width 2s;
 }
 
 :global(li > a:hover) {
   color: white !important;
   fill: white;
   text-decoration: none;
+  transition: color 0.25s ease;
 }
 
 :global(.dropdown-divider) {
@@ -82,6 +84,7 @@ Use the ::before selector to insert something before the content. */
   padding-bottom: 5px;
   width: 14%;
   margin-right: 10px;
+  transition: fill 0.25s ease;
 }
 :global(a:hover .facebook) {
   fill: #3b5998;
